--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
 #root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
     text-align: center;
+    min-height: 100vh;
 }
 
 *,
@@ -11,41 +14,218 @@
     box-sizing: border-box;
 }
 
+hr {
+    border: 0;
+    height: 1px;
+    background: linear-gradient(
+        to right,
+        rgba(255, 255, 255, 0),
+        rgba(255, 255, 255, 0.15),
+        rgba(255, 255, 255, 0)
+    );
+    margin: 0;
+    width: 90%;
+}
+
+/* container */
+.container {
+    width: 100%; /* 'w-full' */
+    max-width: 82rem;
+    margin-left: auto; /* 'mx-auto' centers the div horizontally */
+    margin-right: auto; /* 'mx-auto' */
+    padding-left: 1rem; /* 'px-4' is 16px padding on the left */
+    padding-right: 1rem; /* 'px-4' is 16px padding on the right */
+}
+
+/* Header Section */
+.header {
+    padding: 0.75rem 0; /* py-3 -> 3 * 4px = 12px */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow */
+    width: 100%;
+}
+
+header .logo-container {
+    margin-right: auto; /* mr-4 -> margin-right 16px */
+}
+
+/* Content */
+.content {
+    flex: 1;
+}
+
+.glassmorphism {
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    margin: auto;
+    border-radius: 3px;
+    /* Apply the glassmorphism effect */
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.form-signin h1 {
+    margin: 0;
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.form-signin form {
+    padding: 15px;
+}
+
+.form-signin .btn {
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-left: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+    color: #fff;
+    margin-top: 10px;
+}
+
+.form-signin .btn:hover,
+.form-signin .btn:focus {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: none;
+}
+
+.form-signin .form-control:focus {
+    border-color: #ced4da;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+}
+
+.form-signin .form-control {
+    background: rgba(255, 255, 255, 0.9);
+}
+
+.form-signin .form-check {
+    display: flex;
+    align-items: center;
+    color: rgba(255, 255, 255, 0.65);
+}
+
+.form-signin .form-check label {
+    font-size: 0.9em;
+}
+
+.form-signin .form-check input {
+    margin-right: 0.5em;
+}
+
+.form-signin .form-check input:checked {
+    background-color: #9ce060;
+    border-color: #81c63f;
+}
+
+.form-floating:focus-within {
+    z-index: 2;
+}
+
+/*Footer Section*/
+.footer-section {
+    display: flex;
+    width: 100%;
+    padding: 1rem 2rem;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* shadow */
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    z-index: 10;
+    margin-left: auto;
+    margin-right: auto;
+    /* max-w-7xl -> 1280px */
+    width: 100%;
+    padding-left: 1rem; /* px-4 -> 16px */
+    padding-right: 1rem;
+}
+
+.left-side-contents {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+    gap: 20px;
+    font-size: 12px;
+}
+
+.left-side-contents span {
+    color: wheat;
+}
+
+.left-side-contents a {
+    text-decoration: none;
+    transition: transform 0.3s ease;
+    color: #e5d4d4;
+}
+
+.left-side-contents a:hover {
+    transform: translateY(-3px);
+    color: #e29090;
+}
+
+.region {
+    display: flex;
+    align-items: center;
+}
+
+a.region img {
+    height: 18px;
+    margin-right: 10px;
+    border-radius: 50%;
+}
+
+a.region span {
+    font-size: 12px;
+    text-decoration: none;
+    color: #e5d4d4;
+}
+
 /* Input Component */
 .input-container {
     width: 100%; /* w-full */
 }
 
 .input-label {
-    display: inline-block; /* inline-block */
-    margin-bottom: 4px; /* mb-1 (approx 0.25rem) */
-    padding-left: 4px; /* pl-1 (approx 0.25rem) */
+    display: inline-block;
+    margin-bottom: 4px;
+    padding-left: 4px;
 }
 
 .input-field {
-    padding: 8px 12px; /* px-3 py-2 */
-    border-radius: 8px; /* rounded-lg */
-    background-color: white; /* bg-white */
-    color: black; /* text-black */
-    outline: none; /* outline-none */
-    transition: background-color 200ms; /* duration-200 */
-    border: 1px solid #e5e7eb; /* border and border-gray-200 */
-    width: 100%; /* w-full */
+    padding: 8px 12px;
+    border-radius: 8px;
+    background-color: white;
+    color: black;
+    outline: none;
+    transition: background-color 200ms;
+    border: 1px solid #e5e7eb;
+    width: 100%;
 }
 
 .input-field:focus {
-    background-color: #f9fafb; /* focus:bg-gray-50 */
-}
-
-/* Button Component */
-.button {
-    padding-left: 1rem; /* Equivalent to px-4 */
-    padding-right: 1rem;
-    padding-top: 0.5rem; /* Equivalent to py-2 */
-    padding-bottom: 0.5rem;
-    border-radius: 0.5rem; /* Equivalent to rounded-lg */
-    background-color: #e6d9a2; /* Equivalent to bg-blue-600 */
-    color: #624e88; /* Equivalent to text-white */
+    background-color: #f9fafb;
 }
 
 /* Elevator button */
@@ -77,7 +257,7 @@
         inset 0px 3px 4px rgba(255, 255, 255, 0.6),
         0px -2px 3px rgba(0, 0, 0, 0.6), 0px 1px 2px rgba(255, 255, 255, 0.7),
         0px 0px 1px 1px black, 0px 0px 0px 5px gray, 0px 0px 1px 6px black;
-    display: block;
+        display: block;
     cursor: pointer;
     left: 50%;
     top: 50%;
@@ -98,6 +278,92 @@
     border-color: green;
 } */
 
+/* Login Btn */
+.flex-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.form-container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 32rem; /* max-w-lg */
+    background-color: #f3f4f6; /* bg-gray-100 */
+    border-radius: 0.75rem; /* rounded-xl */
+    padding: 2.5rem; /* p-10 */
+    border: 1px solid rgba(0, 0, 0, 0.1); /* border-black/10 */
+}
+
+form .logo-container {
+    margin-bottom: 0.5rem; /* mb-2 */
+    display: flex;
+    justify-content: center;
+}
+
+form .logo {
+    display: inline-block;
+    width: 100%;
+    max-width: 100px;
+}
+
+.form-title {
+    text-align: center;
+    font-size: 1.5rem; /* text-2xl */
+    font-weight: 700; /* font-bold */
+    line-height: 1.25; /* leading-tight */
+}
+
+.form-subtitle {
+    margin-top: 0.5rem; /* mt-2 */
+    text-align: center;
+    font-size: 1rem; /* text-base */
+    color: rgba(0, 0, 0, 0.6); /* text-black/60 */
+}
+
+.signup-link {
+    font-weight: 500; /* font-medium */
+    color: #3498db; /* text-primary */
+    transition: all 0.2s; /* transition-all duration-200 */
+}
+
+.signup-link:hover {
+    text-decoration: underline; /* hover:underline */
+}
+
+.error-message {
+    color: #dc2626; /* text-red-600 */
+    margin-top: 2rem; /* mt-8 */
+    text-align: center;
+}
+
+.form {
+    margin-top: 2rem; /* mt-8 */
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 1.25rem; /* space-y-5 */
+}
+
+.submit-button {
+    width: 100%;
+}
+
+/* Logout Btn */
+.logout-button {
+    display: inline-block; /* corresponds to 'inline-block' */
+    padding: 8px 24px; /* 'px-6' is 24px horizontal, 'py-2' is 8px vertical */
+    transition: background-color 200ms; /* 'duration-200' */
+    border-radius: 9999px; /* 'rounded-full' gives a fully rounded button */
+}
+
+.logout-button:hover {
+    background-color: #ebf8ff; /* 'hover:bg-blue-100' */
+}
+
 /* Temporary css */
 .temp-container {
     display: flex;
@@ -107,7 +373,100 @@
     margin: auto;
 }
 
-.container {
+/* Helper */
+
+.width-80 {
+    width: 80%;
+}
+
+.navbar {
     display: flex;
+    align-items: center;
+    /* width: 100%; */
+}
+
+.nav-items {
+    display: flex; /* ml-auto -> aligns items to the right */
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     gap: 10px;
+}
+
+.nav-button {
+    display: inline-block;
+    padding: 0.5rem 1.5rem;
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 9999px;
+}
+
+.nav-button:hover {
+    background-color: #626569; /* hover:bg-blue-100 -> light blue background on hover */
+}
+
+/* Button Component */
+.button {
+    padding-left: 1rem; /* Equivalent to px-4 */
+    padding-right: 1rem;
+    padding-top: 0.5rem; /* Equivalent to py-2 */
+    padding-bottom: 0.5rem;
+    border-radius: 0.5rem; /* Equivalent to rounded-lg */
+    background-color: #e6d9a2; /* Equivalent to bg-blue-600 */
+    color: #624e88; /* Equivalent to text-white */
+}
+
+/* Message component */
+/* Base message styling */
+.message {
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+}
+
+/* Success message */
+.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+/* Error message */
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+/* Warning message */
+.warning {
+    background-color: #fff3cd;
+    color: #856404;
+    border: 1px solid #ffeeba;
+}
+
+/* Info message */
+.info {
+    background-color: #d1ecf1;
+    color: #0c5460;
+    border: 1px solid #bee5eb;
+}
+
+/* Close button styling */
+.close-btn {
+    background: none;
+    border: none;
+    font-size: 16px;
+    color: inherit;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+/* auth-section */
+.auth-section {
+    padding: 2rem 0;
 }
